Class Abono added and working

--- a/Prog_III_2020_2_sesion_1.csproj
+++ b/Prog_III_2020_2_sesion_1.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abono.cs" />
     <Compile Include="Carro.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="Combustible.cs" />
