Ajustes Class GestionArchivo finished

--- a/Prog_III_2020_2_sesion_1.csproj
+++ b/Prog_III_2020_2_sesion_1.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Combustible.cs" />
     <Compile Include="EstadoCivil.cs" />
     <Compile Include="Factura.cs" />
+    <Compile Include="GestionArchivo.cs" />
     <Compile Include="Imprimir.cs" />
     <Compile Include="Inventario.cs" />
     <Compile Include="Persona.cs" />
